themes/alef-theme/docroot/_diffs/css/base.css
/* This CSS sets the default styles for the base components. */

/* ---------- Browser normalization ---------- */

body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
	margin: 0;
	padding: 0;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

fieldset, img {
	border: 0;
}

address, caption, cite, code, dfn, em, strong, th, var {
	font-style: normal;
	font-weight: normal;
}

ol, ul {
	list-style: none;
}

caption, th {
	text-align: left;
}

q:before, q:after {
	content: '';
}

abbr, acronym {
	border: 0;
}

body {
	background-color: #fff;
	font: 62.5%/1.6em 'Tahoma','Lucida Sans Unicode','Lucida Grande','Lucida',Arial,Verdana,sans-serif;
}

html, body {
	height: 100%;
}

body.portal-popup {
	padding: 10px;
}

table {
	clear: both;
}

abbr, acronym {
	border-bottom: 1px dotted #000;
	cursor: help;
}

blockquote, ul, ol, dl {
	margin: 1em;
}

ol, ul, dl {
	margin-left: 2em;
}

ol li, ul ol li {
	list-style: decimal outside;
}

ul li, ol ul li {
	list-style: disc outside;
}

ul ul li {
	list-style-type: circle;
}

ol ol li {
	list-style-type: upper-roman;
}

dl dd {
	margin-left: 1em;
}

th {
	font-weight: bold;
}

caption {
	margin-bottom: 0.5em;
	text-align: center;
}

p {
	margin-bottom: 1em;
}

/* ---------- Links ---------- */

a {
	color: #036;
	text-decoration: underline;
}

a:hover {
	color: #06c;
	text-decoration: none;
}

a:visited {
}

/* ---------- Headers ---------- */

h1 {
	font-size: 1.8em;
}

h2 {
	font-size: 1.6em;
}

h3 {
	font-size: 1.4em;
}

h1, h2, h3 {
	margin: 1em 0;
}

h4, h5, h6 {
	font-size: 1.1em;
}

h1, h2, h3, h4, h5, h6, strong {
	font-weight: bold;
}

/* ---------- Text formatting ---------- */

b, strong {
	font-weight: bold;
}

i, em {
	font-style: italic;
}

code, pre {
	font-family: "Courier New",Courier,monospace;
	white-space: pre;
}

.important {
	font-weight: bold;
}

/* ---------- Staging area ---------- */

body.staging #wrapper {
	border: 10px solid #c00;
	padding: 0px 5px 5px;
}

/* ---------- Main content body ---------- */

#wrapper {
}

#content-wrapper {
	margin: 0 auto;
	width: 95%;
}

/* ---------- Banner ---------- */

#banner {
	background: #d9ebfd url(../images/common/banner_bg.png) repeat-x 0 0;
	border-bottom: 1px solid #89c8ff;
	min-height: 120px;
	margin-bottom: 1em;
	position: relative;
}

.ie6 #banner {
	background-image: none;
}

#banner .logo {
	display: block;
	font-size: 2em;
	margin: 0 auto;
	padding: 1.25em 0 1.45em;
}

#banner .logo a {
	text-decoration: none;
}

.ie6 #banner .logo {
	zoom: 1;
}

#banner-content {
	width: 94%;
	margin: 0 auto;
}

/* ---------- Drag Indicators ---------- */

#content-wrapper #layout-grid.dragging {
	border-collapse: separate;
}

#content-wrapper #layout-grid.dragging .lfr-column {
	border: 3px double #89C8FF;
}

.drag-indicator {
	border: 2px dashed #036;
	cursor: move;
	font-size: 0;
	position: relative;
}

.drop-area {
	background-color: #000;
	font-size: 0;
	opacity: .10;
}

.ie .drop-area {
	filter: alpha(opacity=10);
}

.drop-position-top {
	background: url(../images/arrows/03_up.png) scroll repeat-x top left;
}

.drop-position-bottom {
	background: url(../images/arrows/03_down.png) scroll repeat-x bottom left;
}

/* ---------- Alerts and popups ---------- */

.alert-background {
	background: #000;
}

.popup {
	background: #fff;
	border: 1px solid #777;
	padding: 0.4em;
	position: absolute;
}

.popup-header {
	background: #EEF0F1 none repeat scroll 0%;
	border-bottom: 1px solid #aaa;
	color: #333;
	cursor: move;
	padding: 5px;
	position: relative;
}

.popup-title {
	font-size: 1.5em;
	font-weight: bold;
	min-height: 1em;
	white-space: nowrap;
	width: 90%;
}

.ie6 .popup-title {
	height: 1em;
}

.popup-close {
	cursor: pointer;
	position: absolute;
	right: 0.5em;
}

.popup-message {
	padding: 5px;
}

.popup-alert-notice {
	background-color: #ffc;
	border-bottom-color: #fc0;
}

.popup-alert-warning {
	background-color: #fcc;
	border-bottom-color: #f00;
}

/* ---------- Portal add content ---------- */

.portal-add-content {
	background: #fff;
	padding: 8px 4px 0;
	text-align: left;
	z-index: 20;
}

.portal-add-content a {
	text-decoration: none;
}

/* ---------- Portal tool tips ---------- */

.portal-tool-tip {
	background: #DCDCDC;
	border: 1px solid #BFBFBF;
	color: #333;
	font-weight: bold;
	max-width: 200px;
	padding: 0.5em 0.3em;
}

/* ---------- Autocomplete styles ---------- */

.autocomplete-box {
	background: #E2ECF2;
	border: 1px solid #ABC6D7;
	color: #333;
	min-width: 200px;
	padding: 0;
}

.ie6 .autocomplete-box {
	width: 200px;
}

.autocomplete-selected {
	background: #C0D5E3;
	border-bottom: 1px solid #ABC6D7;
	border-top: 1px solid #ABC6D7;
	color: #333;
	font-weight: bold;
	padding: 0.5em 0.3em;
}

/* ---------- Loading animation ---------- */

.loading-animation {
	background: url(../images/progress_bar/loading_animation.gif) no-repeat top center;
	margin-top: 10px;
	padding-top: 40px;
	text-align: left;
}

/* ---------- Separator ---------- */

hr, .separator {
	border: 1px dotted #CCC;
}

/* ---------- Update Manager ---------- */

.update-available {
	margin-top: 10px;
	padding: 2px;
	text-align: left;
}

/* ---------- Text highlighting ---------- */

.highlight {
	background: #ffc;
	font-weight: bold;
	padding: 0 1px;
}

